force-app/main/default/objects/ContentVersion/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pitch Deck</fullName>
            </value>
            <value>
                <fullName>Financial Model</fullName>
            </value>
            <value>
                <fullName>Term Sheet</fullName>
            </value>
            <value>
                <fullName>DD Checklist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>