force-app/main/default/objects/ContentVersion/fields/Last_Viewed_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Viewed_Date__c</fullName>
    <label>Last Viewed Date</label>
    <type>DateTime</type>
</CustomField>