force-app/main/default/objects/ContentVersion/fields/Time_Spent_Viewing__c.field-meta.xml
<CustomField>
    <fullName>Time_Spent_Viewing__c</fullName>
    <label>Time Spent Viewing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>