force-app/main/default/objects/ContentVersion/fields/Viewed_Count__c.field-meta.xml
<CustomField>
    <fullName>Viewed_Count__c</fullName>
    <label>Viewed Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>